TAG: qcreports_db-4-2-1-8
DATE: 04/07/2009
STAFF: lec
CHANGES:
1) TR9606/GXD_Images.py

TAG: qcreports_db-4-2-1-7
DATE: 03/30/2009
STAFF: mhall
CHANGES:
1) TR9555/MRK_New_QTLS.py

TAG: qcreports_db-4-2-1-6
TAG: qcreports_db-4-2-1-5
TAG: qcreports_db-4-2-1-4
DATE: 03/30/2009
STAFF: mhall
CHANGES:
1) TR9557/GXD_Stats.py
2) TR9452/NOMEN_Uninformative_FAM_Markers.py

TAG: qcreports_db-4-2-1-3
TAG: qcreports_db-4-2-1-2
DATE: 03/24/2009
STAFF: lec
CHANGES:
1) TR9526/GXD_Stats.py
2) TR9563/GXD_FullCodeGene.sql
3) TR9566/GXD_ImagesUnused.py

TAG: qcreports_db-4-2-1-1
DATE: 03/18/2009
STAFF: dbm
CHANGES:
1) Merged tr9440 branch to the trunk for 4.21 release
2) Added links to qcr.html for MouseFunc and Microarray Association loads

TAG: qcreports_db-4-2-0-7
DATE: 03/17/2009
STAFF: mhall
CHANGES:
1) Changes to GXD_ImagesUnused.py for tr 9479

TAG: qcreports_db-4-2-0-6
DATE: 03/11/2009
STAFF: lec
CHANGES:
1) TR9517/problem running public/qc reports that join to IMSR
   moved PRB_StrainNonStd.sql from "mgd" to "weekly"

TAG: qcreports_db-4-2-0-5
DATE: 03/06/2009
STAFF: sc
CHANGES:
1) TR9532 weekly/MTB_Triage.py fix

TAG: qcreports_db-4-2-0-4
DATE: 03/05/2009
STAFF: lec
CHANGES:
1) qcr.html; fixed link to mousecycload

TAG: qcreports_db-tr9440-2
TAG: qcreports_db-tr9440-1
DATE: 03/02/2009
STAFF: dbm
CHANGES:
1) Added links to machipload and mousefuncload index files to qcr.html

TAG: qcreports_db-tr9440-BP
DATE: 02/23/2009
STAFF: dbm
CHANGES:
1) Branch point tag for TR9440 (4.21 release)

TAG: qcreports_db-4-2-0-3
DATE: 02/17/2009
STAFF: lec
CHANGES:
1) TR9473/mgd/GXD_WildType.sql

TAG: qcreports_db-4-2-0-2
DATE: 01/11/2009
STAFF: lec
CHANGES:
1) TR9460;weekly/PHENO_ImageCheck.sql

TAG: qcreports_db-4-2-0-1
DATE: 01/09/2009
STAFF: dbm
CHANGES:
1) Fixed link in qcr.html file to be GXD_Stats.current.rpt (not GXD_Stats.rpt)

TAG: qcreports_db-4-1-3-12
DATE: 12/23/2008
STAFF: lec
CHANGES:
1) TR9428; added mgd/GXD_Stats.py to qcnightly_reports.sh archiving.
